--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 </head>
 <body>
 <h1>BootStrap Setup Demo</h1>
-
-
-
+<div class="container">
+    <div class="row">
+        <div class="col align-self-start">
+            One of three columns
+        </div>
+        <div class="col align-self-center">
+            One of three columns
+        </div>
+        <div class="col align-self-end">
+            One of three columns
+        </div>
+    </div>
+</div>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
